After adding Rain icon and time

--- a/index.html
+++ b/index.html
@@ -41,9 +41,18 @@
                 <div id="thunder" class="adjust_thunder" ></div>
             </div>
             <div class="weather_icon_conatiner_rainy">
-                <div id="rainy" class="adjust" ></div>
+                <div id="rain" class="adjust_rain" ></div>
             </div>
 
+        </div>
+
+        <div class="weather_icon_conatiner">
+            <P>05 AM<span class="weather_icon_suffle"></span></P>
+            <p>05 AM<span class="weather_icon_suffle"></span></p>
+            <p>05 AM<span class="weather_icon_suffle"></span></p>
+            <p>05 AM<span class="weather_icon_suffle"></span></p>
+            <p>05 AM<span class="weather_icon_suffle"></span></p>
+            <p>05 AM<span class="weather_icon_suffle"></span></p>
         </div>
     </section>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.9.6/lottie.min.js"></script>
